# VAULT-Aegis

./: LICENSE  README.md  main.py  pyproject.toml
README/: CODE_MIGRATION_MAP.md  DELIVERY_SUMMARY.md  DELIVERY_SUMMARY.txt  FILE_LIST.txt  QUICK_START_GUIDE.md  README.md  REFACTORING_SUMMARY.md  STRUCTURE_DIAGRAM.txt
audit/: ledger.py
config/: security.yaml
gateway/: context.py
policy/: engine.py
scanner/: cli.py
tests/: FINAL_STATUS.md  README.md  TEST_RESULTS.md  run_simple_tests.py  run_tests.py
tests/config/: test_openapi.json  test_policy.yaml
tests/demo/: run_all_demos.py  vault_demo.py
tests/integration/: test_api.py
tests/unit/: test_audit.py  test_audit_simple.py  test_gateway_simple.py  test_middleware.py  test_policy.py  test_policy_simple.py  test_scanner.py  test_scanner_simple.py
